[gd_scene load_steps=12 format=2]

[ext_resource path="res://EffectsResources/RotationArrows.png" type="Texture" id=1]
[ext_resource path="res://EffectsResources/RotationArrows.gd" type="Script" id=2]
[ext_resource path="res://EffectsResources/LeftArrowClick.gd" type="Script" id=3]
[ext_resource path="res://EffectsResources/RightArrowClick.gd" type="Script" id=4]
[ext_resource path="res://EffectsResources/RotationArrowsSelected.png" type="Texture" id=5]
[ext_resource path="res://EffectsResources/Left.gd" type="Script" id=6]
[ext_resource path="res://EffectsResources/Right.gd" type="Script" id=7]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( -16.5, -10, -24, -2, -9, -2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.48875, 5.01071 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.49335, 3.0014 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16.5, -10, 24, -2, 9, -2 )

[node name="RotationArrows" type="Node2D"]
visible = false
position = Vector2( 0, 3 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Left" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="LeftArrow" type="Sprite" parent="Left"]
position = Vector2( -13, 0 )
texture = ExtResource( 1 )
vframes = 2

[node name="LeftArrowSelected" type="Sprite" parent="Left"]
visible = false
texture = ExtResource( 5 )
offset = Vector2( -13, 0 )
vframes = 2

[node name="LeftArrowClick" type="Area2D" parent="Left"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/LeftArrowClick"]
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Left/LeftArrowClick"]
position = Vector2( -16.4922, 2.97077 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Left/LeftArrowClick"]
position = Vector2( -7.49565, 5.99497 )
shape = SubResource( 3 )

[node name="Right" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RightArrow" type="Sprite" parent="Right"]
position = Vector2( 13, 0 )
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="RightArrowSelected" type="Sprite" parent="Right"]
visible = false
texture = ExtResource( 5 )
offset = Vector2( 13, 0 )
vframes = 2
frame = 1

[node name="RightArrowClick" type="Area2D" parent="Right"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 4 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Right/RightArrowClick"]
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Right/RightArrowClick"]
position = Vector2( 16.4448, 3.01823 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Right/RightArrowClick"]
position = Vector2( 7.496, 5.995 )
shape = SubResource( 3 )
[connection signal="clicked" from="Left/LeftArrowClick" to="." method="_on_LeftArrowClick_clicked"]
[connection signal="mouse_entered" from="Left/LeftArrowClick" to="Left" method="_on_LeftArrowClick_mouse_entered"]
[connection signal="mouse_entered" from="Left/LeftArrowClick" to="Left/LeftArrowClick" method="_on_LeftArrowClick_mouse_entered"]
[connection signal="mouse_exited" from="Left/LeftArrowClick" to="Left" method="_on_LeftArrowClick_mouse_exited"]
[connection signal="mouse_exited" from="Left/LeftArrowClick" to="Left/LeftArrowClick" method="_on_LeftArrowClick_mouse_exited"]
[connection signal="clicked" from="Right/RightArrowClick" to="." method="_on_RightArrowClick_clicked"]
[connection signal="mouse_entered" from="Right/RightArrowClick" to="Right" method="_on_RightArrowClick_mouse_entered"]
[connection signal="mouse_entered" from="Right/RightArrowClick" to="Right/RightArrowClick" method="_on_RightArrowClick_mouse_entered"]
[connection signal="mouse_exited" from="Right/RightArrowClick" to="Right" method="_on_RightArrowClick_mouse_exited"]
[connection signal="mouse_exited" from="Right/RightArrowClick" to="Right/RightArrowClick" method="_on_RightArrowClick_mouse_exited"]
